--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "@cpp-ipc"]
 	path = @cpp-ipc
-	url = .\\@cpp-ipc\\
+	url = https://github.com/mutouyun/cpp-ipc.git
+[submodule "@pybind11"]
+	path = @pybind11
+	url = https://github.com/pybind/pybind11.git
