--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/mutouyun/cpp-ipc.git
 [submodule "@pybind11"]
 	path = @pybind11
-	url = https://github.com/pybind/pybind11.git
+	url = ./@pybind11
